# Machine-Learning-for-Optical-Communication

./: .gitignore  main.py  pyproject.toml
beam_project/beam_simulation/: __init__.py
beam_project/beam_simulation/propagation/: __init__.py  lens.py  slm.py
beam_project/tests/: __init__.py  conftest.py  test_10000mm_slm.py  test_1km_beam.py  test_beams.py  test_config.py  test_focal_beam_atmosphere.py  test_gaussian_atmosphere.py  test_generate_oam.py  test_ideal_focus.py  test_propagation.py  test_turbulence.py
